TestRepo2/src/objects/Calendar__c.object
<CustomObject>
    <fields>
        <fullName>Actions_Completed__c</fullName>
        <label>Actions Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Archive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Background_Color2__c</fullName>
        <label>Background Color2</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalendarID_S2S__c</fullName>
        <label>CalendarID(S2S) - delete after migration</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Spirits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consumer_Target_Content_Description__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consumer Target File</label>
        <referenceTo>Content_Description__c</referenceTo>
        <relationshipLabel>Calendar (Consumer Target Content Description)</relationshipLabel>
        <relationshipName>Calendar5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consumer_Target_Text__c</fullName>
        <label>Consumer Target Text</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_Content_Description__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Description File</label>
        <referenceTo>Content_Description__c</referenceTo>
        <relationshipLabel>Calendar (Description Content Description)</relationshipLabel>
        <relationshipName>Calendar7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description Text</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Folder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Folder</label>
        <referenceTo>Folder__c</referenceTo>
        <relationshipLabel>Calendar</relationshipLabel>
        <relationshipName>Calendar</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>How_it_Works_Content_Description__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>How it Works File</label>
        <referenceTo>Content_Description__c</referenceTo>
        <relationshipLabel>Calendar (How it Works Content Description)</relationshipLabel>
        <relationshipName>Calendar6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>How_it_Works_Text__c</fullName>
        <label>How it Works Text</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Idea_Content_Description__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Idea File</label>
        <referenceTo>Content_Description__c</referenceTo>
        <relationshipLabel>Calendar (Idea Content Description)</relationshipLabel>
        <relationshipName>Calendar4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Idea_Text__c</fullName>
        <label>Idea Text</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Launch_Date__c</fullName>
        <description>Launch Date (Innovation, Sustainnovation &amp; VAP calendar)</description>
        <label>Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Logo_Image_Large__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Logo Image (Large)</label>
        <referenceTo>Content_Description__c</referenceTo>
        <relationshipLabel>Calendar (Logo Image (Large))</relationshipLabel>
        <relationshipName>Calendar1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Logo_Image_Small__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Logo Image (Small)</label>
        <referenceTo>Content_Description__c</referenceTo>
        <relationshipLabel>Calendar</relationshipLabel>
        <relationshipName>Calendar</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Org_ID__c</fullName>
        <label>New Org ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Programs__c</fullName>
        <label>Programs</label>
        <picklist>
            <picklistValues>
                <fullName>Brand Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reserve Brand Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portfolio Program</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <description>This field is used as part of a workflow rule that adds the value of the record type&apos;s name so that it can be associated with the Diageo/Control Markets/MHUSA Salesforce to Salesforce Integration - Record Type ID&apos;s don&apos;t naturally map over without a workflow rule in place.</description>
        <label>Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Channel__c</fullName>
        <label>Sales Channel</label>
        <picklist>
            <picklistValues>
                <fullName>On Premise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Premise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrated National Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display/Visibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Sizes, Pack/Label Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>African American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hispanic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LGBT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pack/Label Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vintage Transition</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <picklist>
            <picklistValues>
                <fullName>AF AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hispanic/Latino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLBT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mex Am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Premise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Premise</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Ship_Date__c</fullName>
        <description>Planned Ship Date (Innovation, Sustainnovation &amp; VAP calendar)</description>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Show_tooltip_details__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show tooltip details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Situation_Content_Description__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Situation File</label>
        <referenceTo>Content_Description__c</referenceTo>
        <relationshipLabel>Calendar (Situation Content Description)</relationshipLabel>
        <relationshipName>Calendar3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Situation_Text__c</fullName>
        <label>Situation Text</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Specification_Content_Description__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Specification File</label>
        <referenceTo>Content_Description__c</referenceTo>
        <relationshipLabel>Calendar (Specification Content Description)</relationshipLabel>
        <relationshipName>Calendar2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Specification_Text__c</fullName>
        <label>Specification Text</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Text_Color__c</fullName>
        <description>text color in calendar view</description>
        <label>Text Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Theme__c</fullName>
        <label>Calendar Type</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly Execution Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Marketing Calendar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Programming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovation, Sustainnovation &amp; VAP</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Today_Date__c</fullName>
        <formula>TODAY() - 62</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sell Sheet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>background_color__c</fullName>
        <description>background color to display in calendar view</description>
        <label>Background Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>Calendar</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Sales_Channel__c</columns>
        <columns>Segment__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Innovation_Sustainovation_VAP</fullName>
        <columns>RECORDTYPE</columns>
        <columns>Sales_Channel__c</columns>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Archive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Calendar__c.Innovation_Sustainovation_VAP</value>
        </filters>
        <label>Innovation, Sustainovation &amp; VAP</label>
    </listViews>
    <listViews>
        <fullName>Monthly_Execution_Plan</fullName>
        <columns>RECORDTYPE</columns>
        <columns>Sales_Channel__c</columns>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>Priority__c</columns>
        <columns>End_Date__c</columns>
        <columns>Archive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Calendar__c.Monthly_Execution_Plan</value>
        </filters>
        <label>Monthly Execution Plan</label>
    </listViews>
    <listViews>
        <fullName>Multicultural</fullName>
        <columns>RECORDTYPE</columns>
        <columns>Sales_Channel__c</columns>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Archive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Calendar__c.Multicultural</value>
        </filters>
        <label>Multicultural</label>
    </listViews>
    <listViews>
        <fullName>Planning</fullName>
        <columns>RECORDTYPE</columns>
        <columns>Sales_Channel__c</columns>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Archive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Calendar__c.Planning</value>
        </filters>
        <label>Planning</label>
    </listViews>
    <nameField>
        <label>Calendar Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IA00000024hCtMAI_00NA0000009YyKCMA0</fullName>
        <active>true</active>
        <field>Goal__c.Program__c</field>
        <filterItems>
            <field>Calendar__c.Sales_Channel__c</field>
            <operation>equals</operation>
            <value>Integrated National Program, Distribution, Display/Visibility, Innovation, Sustainovation</value>
        </filterItems>
        <filterItems>
            <field>Calendar__c.Start_Date__c</field>
            <operation>greaterThan</operation>
            <valueField>Calendar__c.Today_Date__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Goal_Program</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IK0000000Crc7MAC_00NK0000000UTCqMAO</fullName>
        <active>true</active>
        <booleanFilter>(1 AND 3) OR (2 AND 4)</booleanFilter>
        <field>File__c.Calendar__c</field>
        <filterItems>
            <field>Calendar__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Planning</value>
        </filterItems>
        <filterItems>
            <field>Calendar__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Multicultural</value>
        </filterItems>
        <filterItems>
            <field>$Source.Page_Section__c</field>
            <operation>equals</operation>
            <value>Planning</value>
        </filterItems>
        <filterItems>
            <field>$Source.Page_Section__c</field>
            <operation>equals</operation>
            <value>Multicultural</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>File_Calendar</name>
        <sourceObject>File__c</sourceObject>
    </namedFilters>
    <pluralLabel>Calendar</pluralLabel>
    <recordTypes>
        <fullName>Innovation_Sustainovation_VAP</fullName>
        <active>true</active>
        <label>Innovation, Sustainovation &amp; VAP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Monthly_Execution_Plan</fullName>
        <active>true</active>
        <label>Monthly Execution Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Multicultural</fullName>
        <active>true</active>
        <label>Multicultural</label>
    </recordTypes>
    <recordTypes>
        <fullName>Planning</fullName>
        <active>true</active>
        <label>Planning</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>LaunchDateRequired</fullName>
        <active>true</active>
        <description>If calendar record type was set to &apos;Innovation, Sustainnovation &amp; VAP&apos; launch date is required.</description>
        <errorConditionFormula>AND
($RecordType.Name = &quot;Innovation, Sustainnovation &amp; VAP&quot;, ISBLANK( Launch_Date__c ) )</errorConditionFormula>
        <errorDisplayField>Launch_Date__c</errorDisplayField>
        <errorMessage>Launch Date is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ShipDateRequired</fullName>
        <active>true</active>
        <description>If calendar record type was set to &apos;Innovation, Sustainnovation &amp; VAP&apos; ship date is required.</description>
        <errorConditionFormula>AND
($RecordType.Name = &quot;Innovation, Sustainnovation &amp; VAP&quot;, ISBLANK( Ship_Date__c ) )</errorConditionFormula>
        <errorDisplayField>Ship_Date__c</errorDisplayField>
        <errorMessage>ShipDate is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>checkStartEndDates</fullName>
        <active>true</active>
        <description>Rule checks if Start Date is lower than End Date</description>
        <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End date value should always be greater than Start date value.</errorMessage>
    </validationRules>
</CustomObject>